--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,10 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    font-family: "Arial", sans-serif;
+    font-family: "Inter", "Arial", sans-serif;
     font-style: 16px;
     line-height: 1.5;
-    background-color: #fff;
+    background-color: var(--body-bg);
     color: var(--text-color);
 }
 
@@ -53,9 +53,9 @@ ul {
 /* CONTAINER */
 .container{
     width: 100%;
-    max-width: 1200px;
-    padding-left: 50px;
-    padding-right: 50px;
+    max-width: 1192px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -63,18 +63,81 @@ ul {
 /* MAIN CONTENT */
 .main-content{
     flex-grow: 1;
+    padding-top: 80px;
+    padding-bottom: 80px;
 }
 
+/* intro page */
+.intro-page {
+    display: flex;
+    align-items: center;
+}
+/* HERO */
+.hero {
+    --text-color: #fff;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 570px;
+    border-radius: 20px;
+    overflow: hidden;
+    color: var(--text-color);
+}
+.hero-main {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-grow: 1;
+    padding: 55px 60px;
+    background-color: #222;
+    background-image: url(../img/Rectangle\ 6.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+.hero-badge {
+    padding: 5px 15px;
+    border: 1px solid var(--text-color);
+    border-radius: 41px;
+    line-height: normal;
+    margin-bottom: 60px;
+    font-size: 14px;
+    font-weight: 500;
+
+}
+.hero-title {
+    margin-top: 0;
+    margin-bottom: 25px;
+    font-size: 36px;
+    line-height: 46px;
+    font-weight: 700;
+}
+.hero-text {
+    margin-top: 0;
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 400;
+}
+.hero-bottom {
+    padding: 28px;
+    text-align: center;
+    font-size: 19px;
+    background-color: var(--green-btn);
+}
+/* //HERO */
+/* //MAIN CONTENT */
 
 
 /* RETINA BG */
 @media
-    only screen and (-webkit-min-device-pixel-ratio: 2),
-    only screen and (   min--moz-device-pixel-ratio: 2),
-    only screen and (     -o-min-device-pixel-ratio: 2/1),
-    only screen and (        min-device-pixel-ratio: 2),
-    only screen and (                min-resolution: 192dpi),
-    only screen and (                min-resolution: 2dppx) {
-        /* retina bg img */
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) {
+    .hero-main {
+        background-image: url(../img/Rectangle\ 6@2x.png);
+    }
 }
 /* //RETINA BG */
