--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,12 @@ html {
     box-sizing: inherit;
 }
 
+*:focus {
+    outline: 3px dashed var(--purple-btn);
+    outline-offset: 2px;
+    border-radius: 8px;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -82,6 +88,8 @@ ul {
     border-radius: 20px;
     overflow: hidden;
     color: var(--text-color);
+    height: 100%;
+    min-height: 640px;
 }
 .hero-main {
     display: flex;
@@ -125,6 +133,72 @@ ul {
     background-color: var(--green-btn);
 }
 /* //HERO */
+
+
+/* FORM */
+.form {
+    width: 100%;
+    padding: 55px 60px 40px;
+    max-width: 570px;
+    margin-left: 12px;
+    border-radius: 20px;
+    overflow: hidden;
+    background-color: #fff;
+}
+.form-title {
+    margin-top: 0;
+    margin-bottom: 65px;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 42px;
+}
+.form-fielts {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 65px;
+}
+.form-fielt {
+    padding-top: 15px;
+    padding-bottom: 14px;
+    border: 0;
+    border-bottom: 1px solid #555;
+    color: #555;
+}
+.form-fielt:focus {
+    border-color: #000;
+    color: #000;
+    font-weight: 600;
+}
+.form-fielt:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+.form-submit {
+    display: block;
+    width: 100%;
+    padding: 20px;
+    margin-bottom: 8px;
+    border: 0;
+    border-radius: 10px;
+    background-color: var(--purple-btn);
+    color: #fff;
+    font-size: 16px;
+    line-height: 19px;
+    font-weight: 600;
+    cursor: pointer;
+}
+.form-notice {
+    text-align: center;
+    font-size: 11px;
+    line-height: 15px;
+    font-weight: 400;
+}
+.form-notice-link {
+    font-weight: 500;
+    color: var(--red-link);
+    text-decoration: underline;
+}
+/* //FORM */
 /* //MAIN CONTENT */
 
 
